# basecamp-cli

./: AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/agent/features/auth/: api.md  cli.md  code.md
docs/agent/features/distribution/: code.md
docs/agent/features/to-dos/: api.md  cli.md
scripts/: release.sh
src/: cli.rs  error.rs  main.rs  ui.rs
src/basecamp/: client.rs  models.rs
src/features/auth/: callback.rs  integration.rs  login.rs  logout.rs  mod.rs  models.rs  oauth.rs  secret_store.rs  whoami.rs
src/features/todos/: add.rs  complete.rs  edit.rs  mod.rs  re_open.rs  search.rs
