[package]
name = "basecamp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
colored = "3.0.0"
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
keyring = { version = "3.6.3", default-features = false, features = ["crypto-rust"] }
age = "0.11.2"
rand = "0.10.0"
sha2 = "0.10.9"
base64 = "0.22.1"
dialoguer = "0.12.0"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["crypto-rust", "linux-native-async-persistent"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["crypto-rust", "apple-native"] }
